Fixes break point where bootstrap collapses top nav bar menu.

--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,10 @@
 /*****************************************************************************/
+/* Bootstrap configuration variables */
+/*****************************************************************************/
+
+$grid-float-breakpoint: 900px;
+
+/*****************************************************************************/
 /* Global SCSS Styles */
 /*****************************************************************************/
 
